[B]Version 1.0.0[/B]

- initial revision. Plays live and on-demand matches from the MLS Live service.